Add Tree Object that hides when player is below